css/config.css
@font-face
{
    font-family: "Roboto";
    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}

body {
  margin: 12px 0 0 0;
  font-family: 'Roboto', sans-serif;
  font-size: 10px;
  padding: 0;
  width: 100%;
}

label {
  font-size: 12px;
  color: #CCC;

}

.desc {
  font-size: 11px;
  color: #888;
}

.keyInfo {
  width: 180px;
  height: 75px;
  display: none;
  position: absolute;
  left: 0;
  top: 0;
  font-size: 11px;
  color: #888;
  background-color: #080808;
  border: 1px solid #888;
  opacity: .95;
  z-index: 1;
}

.keyInfo span {
  position: relative;
  top: 25px;
  left: 5px;
}

.generalinfo {
  width: 180px;
  height: 120px;
  position: absolute;
  display: none;
  left: 0;
  top: 0;
  padding: 3px;
  font-size: 11px;
  color: #888;
  background-color: #080808;
  border: 1px solid #888;
  z-index: 3;
}

.generalinfo span {
  position: relative;
  top: 20px;
  left: 5px;
}

#info, .general {
  background-color: #3d3d3d;
  width: 15px;
  height: 15px;
  font-size: 13px;
  font-weight: 900;
  color: #000;
  margin: 5px;
  border-radius: 2px;
  display: inline-flex;
  justify-content: center;
  position: relative;
  z-index: 2;
}

.general {
  position: relative;
  z-index: 4;
}

#info span, .general span {
  align-self: center;
}


#info:hover, .general:hover, .keyInfo:hover + #info,
.generalinfo:hover + .general {
  background-color: #0098d4;
  cursor: pointer;
}

.keyInfo:hover, .generalinfo:hover {
  cursor: pointer;
}

.tooltipcont:hover .keyInfo {
  display: block;
}

.generaltooltip:hover .generalinfo {
  display: block;
}

.tooltipcont {
  position: relative;
  display: inline-block;
}

.generaltooltip {
  position: relative;
  display: inline-block;
}

.checkelements {
  width: 100%;
  display: inline-flex;
  padding: 5px 0 0 0;
}

.elementcontainer {
  width: 50%;
  height: 165px;
  display: block;
  position: relative;
}

#glowcolor {
  position: relative;
  left: 12px;
  margin-right: 30px;
}

#bordercolor {
  position: relative;
  left: 2px;
}

#opacitySlider {
  position: relative;
  left: 28px;
}

.xuicontainer {
  width: 100%;
  margin-bottom: 5px;
}

#innersection {
  border: 1px solid #000;
  padding: 5px;
  background-color: #212121;
}

xui-section {
  width: 97%;
  margin: 0;
  margin-left: auto;
  margin-right: auto;
}

